@@ -11,7 +11,7 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
-import java.util.Collections;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
@@ -31,8 +31,8 @@ public class CorsConfig {
     @Bean
    CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOriginPatterns(Collections.singletonList("*"));
-        //configuration.setAllowedOrigins(Arrays.asList("http://localhost:19006", "http://allowed-origin2.com")); // Adicione os domínios permitidos aqui
+      //  configuration.setAllowedOriginPatterns(Collections.singletonList("*"));
+       configuration.setAllowedOrigins(List.of("http://localhost:19006")); // Adicione os domínios permitidos aqui
         configuration.setAllowedMethods(Arrays.asList("POST", "GET", "PUT", "DELETE", "OPTIONS"));
         configuration.setAllowCredentials(true);
         configuration.addAllowedHeader("*");
